@@ -3,6 +3,23 @@
 #include<colorer/parsers/helpers/HRCParserHelpers.h>
 #include<colorer/parsers/HRCParserImpl.h>
 
+#ifdef _WIN32
+#include<io.h>
+#include<windows.h>
+#endif
+
+void HRCParserImpl::checkWow64()
+{
+  wow64=true;
+#ifdef _WIN32
+  //check for stack overflow
+  char *b = getenv("PROCESSOR_ARCHITEW6432");
+  if (!b) wow64=false;
+  delete b;
+#endif
+
+};
+
 HRCParserImpl::HRCParserImpl()
  : fileTypeHash(200), fileTypeVector(150), schemeHash(4000),
  regionNamesVector(1000, 200), regionNamesHash(1000)
@@ -12,6 +29,7 @@ HRCParserImpl::HRCParserImpl()
   errorHandler = null;
   curInputSource = null;
   updateStarted = false;
+  checkWow64();
 }
 
 HRCParserImpl::~HRCParserImpl()
@@ -232,6 +250,7 @@ void HRCParserImpl::addPrototype(Element *elem)
       };
       const String *match = ((Text*)content->getFirstChild())->getData();
       CRegExp *matchRE = new CRegExp(match);
+      matchRE->setWow64(wow64);
       matchRE->setPositionMoves(true);
       if (!matchRE->isOk()){
         if (errorHandler != null){
@@ -475,6 +494,7 @@ void HRCParserImpl::addSchemeNodes(SchemeImpl *scheme, Node *elem)
       next->lowPriority = DString("low").equals(((Element*)tmpel)->getAttribute(DString("priority")));
       next->type = SNT_RE;
       next->start = new CRegExp(entMatchParam);
+      next->start->setWow64(wow64);
       next->start->setPositionMoves(false);
       if (!next->start || !next->start->isOk())
         if (errorHandler != null) errorHandler->error(StringBuffer("fault compiling regexp '")+entMatchParam+"' in scheme '"+scheme->schemeName+"'");
@@ -552,6 +572,7 @@ void HRCParserImpl::addSchemeNodes(SchemeImpl *scheme, Node *elem)
       next->innerRegion = DString("yes").equals(((Element*)tmpel)->getAttribute(DString("inner-region")));
       next->type = SNT_SCHEME;
       next->start = new CRegExp(startParam);
+      next->start->setWow64(wow64);
       next->start->setPositionMoves(false);
       if (!next->start->isOk()){
         if (errorHandler != null){
@@ -559,6 +580,7 @@ void HRCParserImpl::addSchemeNodes(SchemeImpl *scheme, Node *elem)
         }
       }
       next->end = new CRegExp();
+      next->end->setWow64(wow64);
       next->end->setPositionMoves(true);
       next->end->setBackRE(next->start);
       next->end->setRE(endParam);
